Refactors ErrorProne and NullAway configuration to root pom (#1540)