@@ -50,10 +50,6 @@
     <jcommander.version>1.82</jcommander.version>
     <license-maven-plugin.version>5.0.0</license-maven-plugin.version>
     <beam.version>2.56.0</beam.version>
-    <auto-value.version>1.11.1</auto-value.version>
-    <lombok.version>1.18.42</lombok.version>
-    <errorprone.version>2.42.0</errorprone.version>
-    <nullaway.version>0.12.10</nullaway.version>
   </properties>
 
   <dependencyManagement>
@@ -387,78 +383,6 @@
             with versions >= 6.1. See https://github.com/spring-projects/spring-framework/wiki/Upgrading-to-Spring-Framework-6.x#parameter-name-retention
             for the details -->
           <parameters>true</parameters>
-          <compilerArgs>
-            <!-- Enable access to the packages at compile time -->
-            <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-            <!-- Enabling ErrorProne;
-              see: https://errorprone.info/docs/installation
-            -->
-            <arg>-XDcompilePolicy=simple</arg>
-            <arg>--should-stop=ifError=FLOW</arg>
-            <arg>
-              -Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=com.google.fhir.analytics -XepExcludedPaths:.*/target/generated-sources/.* -XepOpt:NullAway:JSpecifyMode=true -XepOpt:NullAway:CheckOptionalEmptiness=true
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-            </arg>
-            <arg>
-              -J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
-            </arg>
-          </compilerArgs>
-          <annotationProcessorPaths>
-            <!-- TODO: Check if we can avoid these paths; see here for why:
-              https://errorprone.info/docs/installation#using-error-prone-together-with-other-annotation-processors
-            -->
-            <path>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-              <version>${lombok.version}</version>
-            </path>
-            <path>
-              <groupId>com.google.auto.value</groupId>
-              <artifactId>auto-value</artifactId>
-              <version>${auto-value.version}</version>
-            </path>
-            <path>
-              <groupId>org.mockito</groupId>
-              <artifactId>mockito-inline</artifactId>
-              <version>${mockito.version}</version>
-            </path>
-            <path>
-              <groupId>com.google.errorprone</groupId>
-              <artifactId>error_prone_core</artifactId>
-              <version>${errorprone.version}</version>
-            </path>
-            <path>
-              <groupId>com.uber.nullaway</groupId>
-              <artifactId>nullaway</artifactId>
-              <version>${nullaway.version}</version>
-            </path>
-          </annotationProcessorPaths>
         </configuration>
       </plugin>
       <plugin>
